--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Helps you to get all copied actions",
   "main": "main.js",
   "scripts": {
-    "start": "set NODE_ENV=development && electron ."
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/Exerbaind/clippy#readme",
   "devDependencies": {
     "electron": "^22.0.0"
+  },
+  "dependencies": {
+    "electron-clipboard-extended": "^1.1.1",
+    "electron-store": "^8.1.0"
   }
 }
