--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "dependencies": {
     "electron-clipboard-extended": "^1.1.1",
-    "electron-store": "^8.1.0"
+    "uuid": "^9.0.0"
   }
 }
